--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [project]
 name = "labs"
 version = "0.1.0"
-description = "Add your description here"
 requires-python = ">=3.12"
 dependencies = [
     "pytest>=8.4.2",
 ]
+mypy_path = "src"
